--- a/organic.css
+++ b/organic.css
@@ -48,6 +48,12 @@ header>.header-item{
         gap: 10px;
     }
 }
+header>.header-item:nth-child(1){
+    margin-left: 25px;
+}
+header>.header-item>:nth-child(4){
+    margin-right: 25px;
+}
 section>nav{
     height: 65%;
     width: 99.3%;
@@ -650,48 +656,44 @@ nav>.nav-items{
 .testimonial>.boxes{
     height: 60%;
     width: 73%;
-    /* gap: 10px; */
     display: flex;
-    /* justify-content: space-evenly; */
-    /* align-items: center; */
-    flex-direction: row;
-    background-color: white;
+    align-items: center;
+    img{
+        height: 35%;
+    }
 }
 .testimonial>.boxes>.box:nth-child(1){
-    height: 90%;
+    height: 100%;
     width: 28%;
-    outline: 1px black solid;
-    border: 5px limegreen solid;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 3px limegreen solid;
     left: 10px;
-    /* background-color: blue; */
 }
 .testimonial>.boxes>.box:nth-child(2){
-    position: relative;
-    height: 25%;
-    width: 50%;
-    right: 0;
-    background-color: red;
-}
-/* .testimonial>.boxes:nth-child(){ */
-    /* padding-top: 20px 0px; */
-/* } */
-/* .testimonial>.boxes>.box{
-    height: 70%;
-    width: 43%;
-    border: 1px rgba(128, 128, 128, 0.459) solid;
-    border-radius: 20px;
-    background-color: white;
+    position: absolute;
+    height: 20%;
+    width: 56%;
+    right: 14%;
     display: flex;
-} */
-
+    justify-content: center;
+    flex-direction: column;
+    background-color: aliceblue;
+}
 .bi{
     padding-right: 10px;
 }
-
-.product-bestseller{
-    background-color: white;
-}
-/* recent blogs */
-.recentblogs{
-    background-color: aliceblue;
+footer{
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+    color: white;
+    p{
+        span{
+            color: limegreen;
+        }
+    }
 }
